<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_app">My Nanodegree Apps!</string>
    <string name="popular_music">Popular music</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
