<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pranav.project0.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_nanodegree_app"
            style="@style/header_text_style"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            >

        <Button
            android:id="@+id/popular_music_button"
            style="@style/button_style"
            android:text="@string/popular_music"
            />

        <Button
            android:id="@+id/stock_hawk_button"
            style="@style/button_style"
            android:text="@string/stock_hawk"
            />

        <Button
            android:id="@+id/build_it_bigger_button"
            style="@style/button_style"
            android:text="@string/build_it_bigger"
            />

        <Button
            android:id="@+id/make_your_app_material_button"
            style="@style/button_style"
            android:text="@string/make_your_app_material"
            />

        <Button
            android:id="@+id/go_ubiquitous_button"
            style="@style/button_style"
            android:text="@string/go_ubiquitous"
            />

        <Button
            android:id="@+id/capstone_button"
            style="@style/button_style"
            android:text="@string/capstone"
            />

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
